<resources>
    <string name="app_name">集思谱</string>
    <string name="prompt_exit_app">再按一次退出程序</string>
    <string name="et_login_input_nunbers_phone">输入手机号</string>
    <string name="et_input_psw">输入密码</string>
    <string name="bt_forget_psw">密码</string>
    <string name="loginID">注册新账号</string>
    <string name="back">  返回</string>
    <string name="register">登录</string>
    <string name="login">注册</string>
    <string name="confirm">确定</string>
    <string name="user_agreement">用户协议</string>
    <string name="forget_password">忘记密码?</string>
    <string name="enter_password">输入密码</string>
    <string name="login_enter_password">输入密码</string>
    <string name="login_second_password">确认密码</string>
    <string name="enter_phone">手机号码</string>
    <string name="enter_nickname">输入昵称</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="gril">女</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="enter_verification_code">输入验证码</string>
    <string name="err">服务器异常或网络异常</string>
    <string name="share_result">"分享成功啦"</string>
    <string name="share_error">"分享失败啦"</string>
    <string name="share_cancel">"分享取消了"</string>
    <string name="please_log_in">请登录</string>
    <string name="format_not_correct">手机号码格式不正确</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="phone_not_registered">该手机号未注册</string>
    <string name="phone_existing">该手机号已存在</string>
    <string name="comment">评论  </string>
    <string name="cancel">取消</string>
    <string name="credits">积分</string>
    <string name="complete">完成</string>
    <string name="not_found">未找到结果</string>
    <string name="unbounded">未绑定</string>
    <string name="verification_code_empty">验证码不能为空</string>
    <string name="password_cannot_empty">密码不能为空</string>
    <string name="name_cannot_empty">姓名不能为空</string>
    <string name="passwords_match">密码不一致</string>
    <string name="password_can_only">密码6~8位,只能包含数字字母下划线</string>
    <string name="change_password">修改密码</string>
    <string name="select_type_feedback">请选择反馈类型!</string>
    <string name="input_feedback_content">请输入反馈内容!</string>
    <string name="account_cannot_empty">账号不能为空</string>
    <string name="authorization_success">授权成功</string>
    <string name="authorization_error">授权出错</string>
    <string name="authorization_cancel">授权取消</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="phone_format_correct">手机号码格式不正确</string>
    <string name="phone_been_binding">该手机号已被绑定</string>
    <string name="enter_the_password">输入密码不一致</string>
    <string name="enter_the_phone">输入手机号码不一致</string>
    <string name="enter_password_consistent">输入密码一致</string>
    <string name="newpassword_oldpassword_same">新密码与旧密码相同</string>
    <string name="enter_correct_password">请输入正确的密码</string>
    <string name="ensure_correct_password">请保证密码输入一致</string>
    <string name="determine_cancellation">确定注销?</string>
    <string name="user_name">用户名</string>
    <string name="sex_info">性别</string>
    <string name="harmful_materials">有害内容</string>
    <string name="pornographic">淫秽色情</string>
    <string name="falsity_content">虚假内容</string>
    <string name="information_disclosure">信息泄露</string>
    <string name="spam">垃圾广告</string>
    <string name="copyright_disputes">版权纠纷</string>
    <string name="submit">提交</string>
    <string name="setting">设置</string>
    <string name="account_security">账号与安全</string>
    <string name="system_setting">系统设置</string>
    <string name="about_giiisp">关于集思谱</string>
    <string name="giiisp">集思谱</string>
    <string name="logout">退出登录</string>
    <string name="binding_phone">绑定手机</string>
    <string name="input_verification_code">请输入4位数证码</string>
    <string name="correct_verification_code">请输入正确的验证码</string>
    <string name="current_password">当前密码:</string>
    <string name="show_password">显示密码</string>
    <string name="confirm_password">确认密码:</string>
    <string name="new_password">输入新密码</string>
    <string name="new_pwd">新密码　:</string>
    <string name="camera">拍照</string>
    <string name="album">图库</string>
    <string name="msg_title">系统消息</string>
    <string name="cleancache">清除缓存</string>
    <string name="company">集思谱(北京)科技有限公司</string>
    <string name="feedback">反馈</string>
    <string name="giiisp_copyright">Copyright © 2017 GIIISP</string>
    <string name="name">姓名</string>
    <string name="area_code">+86</string>
    <string name="user_mechanism">机构</string>
    <string name="user_position">职称</string>
    <string name="user_resume">履历</string>
    <string name="at_my">\@我的</string>
    <string name="praise">赞</string>
    <string name="problem">问题</string>
    <string name="answer">回答</string>
    <string name="friend_request">好友请求</string>
    <string name="same_question">同问</string>
    <string name="news">消息</string>
    <string name="my_suggest">我有建议</string>
    <string name="comment_failure">问答发送失败</string>
    <string name="share_failure">播放失败</string>
    <string name="crash">产品闪退</string>
    <string name="contact">联系方式:邮箱、QQ、手机号 (选填)</string>
    <string name="prompt">请勿提交不良信息，否则将导致你的账号被封禁</string>
    <string name="phone_login">手机登录</string>
    <string name="weixin_login">微信登录</string>
    <string name="tourist">游客进入</string>
    <string name="slogan">是一种科研方式</string>
    <string name="retrieve_password">找回密码</string>
    <string name="notification_settings">通知设置</string>
    <string name="my_points">我的积分</string>
    <string name="icon">头像</string>
    <string name="image_watermarking">图片水印</string>
    <string name="voice_selection">语音选择</string>
    <string name="school">学校</string>
    <string name="major">专业</string>
    <string name="edubackground">学历</string>
    <string name="degree">学位</string>
    <string name="starttime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="select_your_person">请选择您的认证人</string>
    <string name="professional_identity">选择以下一位认证人，请Ta证明您的职业身份</string>
    <string name="someone_may_know">您可能认识的人</string>
    <string name="edit">编辑</string>
    <string name="add_to">添加</string>
    <string name="self_introduction">自我介绍</string>
    <string name="education_experience">教育经历</string>
    <string name="add_job_information">添加职位信息</string>
    <string name="subordinate_institution">所属机构</string>
    <string name="fieldmajor">领域/专业</string>
    <string name="real_name">真实姓名</string>
    <string name="fill_in_email">请填写您的机构邮箱</string>
    <string name="email">邮箱</string>
    <string name="contact_information">联系方式</string>
    <string name="welcome_page">欢迎页</string>
    <string name="choose_areas_interest">请选择您关注的专业领域</string>
    <string name="areas_of_concern">关注的领域</string>
    <string name="key_words">关注的关键字</string>
    <string name="concerned_scholar">关注的学者</string>
    <string name="you_are_welcome">完成，欢迎进入集思谱！</string>
    <string name="empty">清空</string>
    <string name="answer_concise">提问请尽量简洁,控制在100字以内…</string>
    <string name="publish">发表</string>
    <string name="put_question">提问</string>
    <string name="congratulations">恭喜您!</string>
    <string name="successful_submission">您的认证资料已成功提交!</string>
    <string name="Return_home">返回首页</string>
    <string name="examine_prompt">我们会在3~5个工作日完成对资料的审核</string>
    <string name="sms_notification">并以短信的形式通知您。</string>
    <string name="confirm_submission">确认提交</string>
    <string name="screening_certificate">筛选证明人</string>
    <string name="privacy_setting">隐私设置</string>
    <string name="unknown">未知</string>
    <string name="dubbing_consistent_with_text">配音请与文本保持一致</string>
    <string name="field">领域</string>
    <string name="keyword">关键字</string>
    <string name="scholars">学者</string>
    <string name="click_start_voice">点击开始配音</string>
    <string name="reset">重录</string>
    <string name="click_on_the_audition">点击试听</string>
    <string name="there_is_no_data">There is no data</string>
    <string name="follow">关注</string>
    <string name="fans">粉丝</string>
    <string name="summary">综述</string>
    <string name="paper">论文</string>
    <string name="answers">答:</string>
    <string name="author">作者:</string>
    <string name="open_up">展开</string>
    <string name="examine_minutely">追问</string>
    <string name="reply">回复</string>
    <string name="to_answer">追答</string>
    <string name="web_link">网页链接</string>
    <string name="you_search">你搜过的</string>
    <string name="more">更多</string>
    <string name="follow_add">+关注</string>
    <string name="abstract_version">摘要版</string>
    <string name="en">EN</string>
    <string name="release">发布</string>
    <string name="preview">预览</string>
    <string name="department">部 门:</string>
    <string name="position">职 位:</string>
    <string name="research_field">研究领域:</string>
    <string name="introduction_of_scholars">学者简介</string>
    <string name="paper_list">论文列表</string>
    <string name="review_list">综述列表</string>
    <string name="organization">机 构:</string>
    <string name="authentication_information">认证信息</string>
    <string name="journal_name_author_keyword">刊物名称/作者/关键字</string>
    <string name="giiisp_slogan">是 一 种 科 研 方 式</string>
    <string name="all_start">全部开始</string>
    <string name="all_suspended">全部暂停</string>
    <string name="later">稍后</string>
    <string name="upgrade">升级</string>
    <string name="search">搜索</string>
    <string name="remake">重录</string>
    <string name="audition">试听</string>
    <string name="timer">00:00:00</string>
    <string name="next_choose_references">下一步：选择证明人</string>
    <string name="mandatory">必选</string>
    <string name="select_area_expertise">点击选择您关注的专业领域</string>
    <string name="access_to_home">直接进入首页</string>
    <string name="search_hint">关键字、论文标题、机构、期刊、学者等</string>
    <string name="history">历史</string>
    <string name="download">下载</string>
    <string name="giiisp_com">giiisp.com</string>
    <string name="unauthorized">未认证</string>
    <string name="question_and_answer">问答</string>
    <string name="subscribe">订阅</string>
    <string name="play_the_history">播放历史</string>
    <string name="contacts">联系人</string>
    <string name="collection">收藏</string>
    <string name="my_inquires">我要提问</string>
    <string name="cn">CN</string>
    <string name="integrity">完整</string>
    <string name="essence">精华</string>
    <string name="digest">摘要</string>
    <string name="all_the_people">所有人</string>
    <string name="only_friends">仅好友</string>
    <string name="only_yourself">仅自己</string>
    <string name="see_my_information">谁可以看我的资料</string>
    <string name="see_my_email">谁可以看我的邮箱</string>
    <string name="see_my_phone">谁可以看我的电话号码</string>
    <string name="problem_hint">追问次数仅限一次,请简要您的问题。</string>
    <string name="record_hint">配音请于文本保持一致</string>
    <string name="complete_record_hint">点击开始朗读您的长文本解答</string>
    <string name="click_start_recording">点击开始录制</string>
    <string name="dubbing">配音</string>
    <string name="is_dubbing">正在配音</string>
    <string name="dubbing_pause">配音已暂停</string>
    <string name="cancel_storage_permission">取消存储授权,不能存储录音文件</string>
    <string name="prohibit_storage_permission">您已经禁止弹出存储的授权操作,请在设置中手动开启</string>
    <string name="cancel_audio_permission">取消录音授权,不能录音</string>
    <string name="prohibit_audio_permission">您已经禁止弹出录音的授权操作,请在设置中手动开启</string>
    <string name="failed_create_file">创建文件失败</string>
    <string name="audio_error">录音出现异常,请检查相关权限</string>
    <string name="edit_information">编辑名片信息</string>
    <string name="save">保存</string>
    <string name="my_education_experience">我的教育经历</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="questions_answers">问答</string>
    <string name="literature_index">文献索引</string>
    <string name="label">标签</string>
    <string name="please_input_answered">请输入你回答的内容…</string>
    <string name="please_input_content">请输入内容…</string>
    <string name="edit_user_web">个人网址</string>
</resources>