<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackground"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@color/colorWhite"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/text_12sp_colorblack"
            android:layout_marginTop="17.3dp"
            android:text="@string/congratulations"/>

        <TextView
            style="@style/text_12sp_colorblack"
            android:layout_marginTop="9.7dp"
            android:text="@string/successful_submission"/>
    </LinearLayout>

    <ImageView
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="66dp"
        android:src="@mipmap/finish_icon"/>

    <TextView
        android:id="@+id/tv_back"
        style="@style/text_12sp_colorauxiliary"
        android:padding="10dp"
        android:text="@string/Return_home"/>

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        style="@style/text_12sp_colorgray"
        android:layout_marginBottom="12dp"
        android:text="@string/examine_prompt"/>

    <TextView
        style="@style/text_12sp_colorgray"
        android:layout_marginBottom="54dp"
        android:text="@string/sms_notification"/>

</LinearLayout>